# pure-json

./: default.nix  pure-json.cabal
src/Pure/Data/: JSON.hs
src/Pure/Data/JSON/: GHC.hs  GHCJS.hs
