name:                pure-json
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-json
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-txt >= 0.7 && < 1,
    bytestring

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.JSON

  default-language: Haskell2010

  if (impl(ghcjs))

    build-depends:
        ghcjs-base

    other-modules:
      Pure.Data.JSON.GHCJS

  else

    build-depends:
      unordered-containers >= 0.2 && < 0.3,
      vector >= 0.12 && < 0.13,
      text >= 1.2 && < 1.3,
      aeson,
      aeson-pretty >= 0.8 && < 0.9


    other-modules:
      Pure.Data.JSON.GHC