name:                pure-json
version:             0.8.0.0
homepage:            purehs.org/doc/pure-json
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-json.git

library
  build-depends:
    base,
    pure-txt,
    bytestring

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.JSON

  default-language: Haskell2010

  if (impl(ghcjs))

    build-depends:
        ghcjs-base

    other-modules:
      Pure.Data.JSON.GHCJS

  else

    build-depends:
      unordered-containers,
      vector,
      text,
      aeson,
      aeson-pretty


    other-modules:
      Pure.Data.JSON.GHC
